--- a/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
+++ b/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-073-439">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.15 <date>2023</date>
+                <edition>v 1.1.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -153,6 +153,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T21:26:08.544Z" type="text-version" status="1.1.15" xml:id="UT22084-091-073-470">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#celso" when="2024-04-01T16:59:30.93Z" type="text-version" status="1.1.16" xml:id="UT22084-091-073-471">
+                    <desc>Updated broken IOL links</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1642,24 +1645,36 @@
                     </div>
                     <div type="section" xml:id="UT22084-091-073-listBibl-1-3">
                         <head type="section" tid="146">Dunhuang Manuscripts</head>
-                        <bibl xml:id="UT22084-091-073-210">British Library: <lb/>IOL Tib J <ref target="http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.4;img=1">310.4</ref>
-                            <lb/>IOL Tib J <ref target="http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.1208;img=1">310.1208</ref>
-                            <lb/>IOL Tib J <ref target="http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.1209;img=1">310.1209</ref>
-                            <lb/>IOL Tib J <ref target="http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.1210;img=1">310.1210</ref> 
-                            (or <ref target="http://idp.bl.uk/database/stitched.a4d?recnum=12514">complete text</ref>)</bibl>
+                        <bibl xml:id="UT22084-091-073-210">British Library: <lb/>IOL Tib J <ref target="https://idp.bl.uk/collection/AA04253004AC4EFCB3AEC86F24F90168/?return=%2Fcollection%2F%3Fterm%3DIOL%2520Tib%2520J%2520310.4">310.4</ref>
+                            <!--OLD-->
+                            <!--http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.4;img=1-->
+                            <lb/>IOL Tib J <ref target="https://idp.bl.uk/collection/133173D6FCF746A08F81304916D7F82E/?return=%2Fcollection%2F%3Fterm%3DIOL%2520Tib%2520J%2520310.1208">310.1208</ref>
+                            <!--http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.1208;img=1-->
+                            <lb/>IOL Tib J <ref target="https://idp.bl.uk/collection/D7BE18EF640742149A52DB528C6D3DB7/?return=%2Fcollection%2F%3Fterm%3DIOL%2520Tib%2520J%2520310.1209">310.1209</ref>
+                            <!--http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.1209;img=1-->
+                            <lb/>IOL Tib J <ref target="https://idp.bl.uk/collection/29391E1053954198BD95EB10E5B6A0D6/?return=%2Fcollection%2F%3Fterm%3DIOL%2520Tib%2520J%2520310.1210">310.1210</ref> 
+                            <!--http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20310.1210;img=1-->
+                            <!--(or <ref target="http://idp.bl.uk/database/stitched.a4d?recnum=12514">complete text</ref>)-->
+                        </bibl>
                         <bibl xml:id="UT22084-091-073-211">Vienna Kanjur and Tenjur Resources:<lb/>
-                            IOL Tib J <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheLVP.php?vol=308&amp;beg=3">308</ref>
+                            IOL Tib J <ref target="http://www.rkts.org/images.php?id=4%7CVP%7CMWIOL%7CIIOL308%7C1%7C1">308</ref>
                             <lb/>
-                            IOL Tib J <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheLVP.php?vol=309&amp;beg=3">309</ref>
+                            <!--https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheLVP.php?vol=308&amp;beg=3-->
+                            IOL Tib J <ref target="http://www.rkts.org/images.php?id=4%7CVP%7CMWIOL%7CIIOL309%7C1%7C1">309</ref>
                             <lb/>
-                            IOL Tib J <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheIDP.php?vol=5315&amp;beg=3">463</ref>
+                            <!--https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheLVP.php?vol=309&amp;beg=3-->
+                            IOL Tib J <ref target="http://www.rkts.org/images.php?id=4%7CVP%7CMWIOL%7CIIOL463%7C1%7C1">463</ref>
                             <lb/>
-                            IOL Tib J <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheIDP.php?vol=4426&amp;beg=1">790</ref>
+                            <!--https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheIDP.php?vol=5315&amp;beg=3-->
+                            IOL Tib J <ref target="https://idp.bl.uk/collection/106E618C7A74481E909AE841536D8640/?return=%2Fcollection%2F%3Fterm%3DIOL%2520Tib%2520J%2520790">790</ref>
                             <lb/>
-                            Pelliot collection <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT98&amp;beg=33">PT 98</ref>
+                            <!--https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheIDP.php?vol=4426&amp;beg=1-->
+                            Pelliot collection <ref target="http://www.rkts.org/images.php?id=4|PT|MWPT|IPT98|1|1">PT 98</ref>
                             <lb/>
-                            Pelliot Collection <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT105&amp;beg=5">PT 105</ref>
+                            <!--https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT98&amp;beg=33-->
+                            Pelliot Collection <ref target="http://www.rkts.org/images.php?id=4|PT|MWPT|IPT105|1|1">PT 105</ref>
                             <lb/>
+                            <!--https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT105&amp;beg=5-->
                         </bibl>
                         <bibl xml:id="UT22084-091-073-212">Schøyen Collection<lb/>
                             <ref target="https://www.schoyencollection.com/media/djcatalog2/images/item/5/boundless-life-mahayana-sutra-ms-2100.1_f.jpg">MS2100</ref>
@@ -2334,7 +2349,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mgon med zas sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A wealthy merchant in the town of Śrāvastī, who became a patron of
                                 the Buddha Śākyamuni. He bought Prince Jeta’s Park, the Jetavana, to be the Buddha’s
                                 first monastery, a place where the monks could stay during the monsoon. Although his
@@ -2551,7 +2566,7 @@
                             <term>Amnyé Zhab Ngawang Kunga Sonam</term>
                             <term xml:lang="Bo-Ltn">a myes zhabs ngag dbang kun dga’ bsod nams </term>
                             <term xml:lang="bo">ཨ་མྱེས་ཞབས་ང་དབང་ཀུན་དགའ་བསོད་ནམས།</term>
-                            <term xml:lang="Sa-Ltn"/>
+                            
                             <term type="definition">A seventeenth century scholar (1597–1659), the twenty-seventh Sakya Trizin.</term>
                         </gloss>
                     </item>-->
@@ -2589,7 +2604,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the buddha of our era, the fourth buddha of this
                                 Bhadraka eon.</p>
                             </note>
@@ -2716,7 +2731,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the southern continent in Buddhist cosmology, which can
                                 mean the known world of humans or, more specifically, the Indian subcontinent. In the
                                     <title xml:lang="Sa-Ltn">Karaṇḍavyūha Sūtra</title>, Sri Lanka is described as being
