--- a/translations/kangyur/placeholders/090-013_toh569,859-the_incantation_of_abhisecani.xml
+++ b/translations/kangyur/placeholders/090-013_toh569,859-the_incantation_of_abhisecani.xml
@@ -5,14 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dbang bskur ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">abhiṣecanīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Abhiṣecanīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Abhiṣecanī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dbang bskur ba zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryābhiṣecanīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryābhiṣecanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dbang bskur ba zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryābhiṣecanīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryābhiṣecanīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-090-013"/>
             </publicationStmt>
             <sourceDesc>
@@ -28,19 +33,26 @@
                 <bibl key="toh859" type="text">
                     <ref>Toh 859</ref>
                     <biblScope>vol.100,ff. 85v-86r(pp.170-172)</biblScope>
-                    <author role="translatorTib">t. jinamitra</author>
-                    <author role="translatorTib">danasila</author>
-                    <author role="translatorTib">ye shes sde</author>
-                    <location work="UT4CZ5369" count-pages="3">
-                        <volume number="100" start-page="170" end-page="172"/>
+                    <author role="translatorTib" xml:id="UT22084-090-013-2">t. jinamitra</author>
+                    <author role="translatorTib" xml:id="UT22084-090-013-3">danasila</author>
+                    <author role="translatorTib" xml:id="UT22084-090-013-4">ye shes sde</author>
+                    <location work="UT4CZ5369" count-pages="4">
+                        <volume number="101" start-page="168" end-page="171"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12621" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:33:25.102Z" user="celso">23/09/2021 17:33:25</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-090-013-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T06:30:08.808Z" type="text-version" status="0.0.2" xml:id="UT22084-090-013-5">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
