--- a/translations/kangyur/placeholders/091-075_toh677,864-the_incantation_of_amitabha.xml
+++ b/translations/kangyur/placeholders/091-075_toh677,864-the_incantation_of_amitabha.xml
@@ -5,14 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">snang mtha'i gzungs sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">amitābhadhāraṇīmantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Amitābhadhāraṇīmantra</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of Amitābha</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan 'das snang ba mtha' yas kyi gzungs sngags/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">bhagavadamitābhadhāraṇīmantra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Bhagavadamitābhadhāraṇīmantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan 'das snang ba mtha' yas kyi gzungs sngags/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">bhagavadamitābhadhāraṇīmantra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Bhagavadamitābhadhāraṇīmantra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-075"/>
             </publicationStmt>
             <sourceDesc>
@@ -29,15 +34,22 @@
                     <ref>Toh 864</ref>
                     <biblScope>vol.100,ff. 87v-88r(pp.174-175)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="100" start-page="174" end-page="175"/>
+                        <volume number="101" start-page="172" end-page="173"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12626" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-27T13:19:28.241Z" user="celso">27/09/2021 13:19:28</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-075-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T08:45:25.305Z" type="text-version" status="0.0.2" xml:id="UT22084-091-075-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
