--- a/translations/kangyur/placeholders/091-076_toh678,867-calling_amitabha_to_mind.xml
+++ b/translations/kangyur/placeholders/091-076_toh678,867-calling_amitabha_to_mind.xml
@@ -4,14 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">snang mtha' rjes su dran pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">Calling Amitābha to Mind</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">snang mtha' rjes su dran pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">snang ba mtha' yas rjes su dran pa/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">snang ba mtha' yas rjes su dran pa/</title>
+                <author role="translatorMain" xml:id="UT22084-091-076-4">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-091-076-5">Annie Heckman</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +33,7 @@
                     <ref>Toh 867</ref>
                     <biblScope>vol.100, ff.88v-88v(pp.176-176)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="100" start-page="176" end-page="176"/>
+                        <volume number="101" start-page="174" end-page="174"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12629" work="W22084"/>
@@ -49,6 +50,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:01:35.136Z" type="text-version" status="0.0.1" xml:id="UT22084-091-076-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:02:10.092Z" type="text-version" status="0.0.2" xml:id="UT22084-091-076-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T08:53:02.49Z" type="text-version" status="0.0.3" xml:id="UT22084-091-076-7">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
