--- a/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
@@ -4,20 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs kyi mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">avalokiteśvarāṣṭottaraśataka­nāma dhāraṇīmantrasahitam</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Avalokiteśvara</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Avalokiteśvarāṣṭottaraśataka­nāma dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs kyi mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
                 <title type="otherTitle" xml:lang="en">[Note: this and the following seven dhāraṇī (Toh. 634-641) give series of 108 names for the eight bodhisattvas. The placement of nāma (name) in the titles varies and is questionable in many; the longer titles are to be understood as “The 108 names of ‚Ä¶ along with the dhāraṇī”.]</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">spyan ras gzigs kyii mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇīmantra of the Hundred and Eight Names of Avalokiteśvara</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">avalokiteśvarāṣṭottara­śataka­nāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāvalokiteśvarāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Avalokiteśvarāṣṭottara­śataka­nāma dhāraṇīmantrasahitam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">spyan ras gzigs kyii mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
+                <author role="translatorMain" xml:id="UT22084-091-031-6">University of Bonn Translation Group</author>
+                <consultant role="projectManager" xml:id="UT22084-091-031-9">Lewis Doney</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-031-10">Kalsang Norbu Gurung</author>
+                <author role="translatorEng" xml:id="UT22084-091-031-11">Shonu Dhondup</author>
+                <consultant role="advisor" xml:id="UT22084-091-031-12">Charles DiSimone</consultant>
+                <consultant role="advisor" xml:id="UT22084-091-031-13">Channa Li</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +43,7 @@
                     <ref>Toh 874</ref>
                     <biblScope>vol.100, ff.100v-103r(pp.200-205)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="100" start-page="200" end-page="205"/>
+                        <volume number="101" start-page="198" end-page="203"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12636" work="W22084"/>
@@ -61,6 +65,15 @@
                 </change>
                 <change who="#line-tofte" when="2023-09-06T10:11:47.927Z" type="text-version" status="0.0.3" xml:id="UT22084-091-031-5">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T10:12:26.931Z" type="text-version" status="0.0.4" xml:id="UT22084-091-031-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T10:13:16.11Z" type="text-version" status="0.0.5" xml:id="UT22084-091-031-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T11:15:47.818Z" type="text-version" status="0.0.6" xml:id="UT22084-091-031-15">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
