--- a/translations/kangyur/placeholders/091-034_toh637,877-the_incantation_of_the_one_hundred_and_eight_names_of_samantabhadra.xml
+++ b/translations/kangyur/placeholders/091-034_toh637,877-the_incantation_of_the_one_hundred_and_eight_names_of_samantabhadra.xml
@@ -5,15 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">kun tu bzang po'i mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">samantabhadrāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Samantabhadrāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Samantabhadra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa kun tu bzang po'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasamantabhadrāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasamantabhadrāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇīmantra of the Hundred and Eight Names of Samantabhadra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa kun tu bzang po'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasamanta­bhadrāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasamanta­bhadrāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-034"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,15 +35,22 @@
                     <ref>Toh 877</ref>
                     <biblScope>vol.100, ff.107v-111r(pp.214-221)</biblScope>
                     <location work="UT4CZ5369" count-pages="8">
-                        <volume number="100" start-page="214" end-page="221"/>
+                        <volume number="101" start-page="212" end-page="219"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12639" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-27T13:19:00.3Z" user="celso">27/09/2021 13:19:00</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-034-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T12:59:39.297Z" type="text-version" status="0.0.2" xml:id="UT22084-091-034-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
