--- a/translations/kangyur/placeholders/091-035_toh638,878-the_incantation_of_the_one_hundred_and_eight_names_of_vajrapani.xml
+++ b/translations/kangyur/placeholders/091-035_toh638,878-the_incantation_of_the_one_hundred_and_eight_names_of_vajrapani.xml
@@ -5,15 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyag na rdo rje'i mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajrapāṇyaṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vajrapāṇyaṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Vajrapāṇi</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryavajrapāṇyaṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrapāṇyaṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇīmantra of the Hundred and Eight Names of Vajrapāṇi</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phyag na rdo rje'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryavajrapāṇyaṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrapāṇyaṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-035"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,15 +35,22 @@
                     <ref>Toh 878</ref>
                     <biblScope>vol.100, ff.111r-114r(pp.221-227)</biblScope>
                     <location work="UT4CZ5369" count-pages="7">
-                        <volume number="100" start-page="221" end-page="227"/>
+                        <volume number="101" start-page="219" end-page="225"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12640" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-27T13:18:48.066Z" user="celso">27/09/2021 13:18:48</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-035-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T13:31:28.365Z" type="text-version" status="0.0.2" xml:id="UT22084-091-035-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
