--- a/translations/kangyur/placeholders/091-038_toh641,881-the_incantation_of_the_one_hundred_and_eight_names_of_ksitigarbha.xml
+++ b/translations/kangyur/placeholders/091-038_toh641,881-the_incantation_of_the_one_hundred_and_eight_names_of_ksitigarbha.xml
@@ -5,15 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sa'i snying po'i mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kṣitigarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Kṣitigarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Kṣitigarbha</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sa'i snying po'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakṣitigarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryakṣitigarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Hundred and Eight Names of Kṣitigarbha</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">kṣitigarbhāṣṭottaraśatakanāma dhāraṇīmantrasahitam</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakṣitigarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryakṣitigarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-038"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,15 +35,22 @@
                     <ref>Toh 881</ref>
                     <biblScope>vol.100, ff.119v-122r(pp.238-243)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="100" start-page="238" end-page="243"/>
+                        <volume number="101" start-page="236" end-page="241"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12643" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-27T13:18:13.116Z" user="celso">27/09/2021 13:18:13</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-038-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T13:39:35.416Z" type="text-version" status="0.0.2" xml:id="UT22084-091-038-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
